@@ -1,0 +1,25 @@
+
+package Paws::ACM::ImportCertificateResponse;
+  use Moose;
+  has CertificateArn => (is => 'ro', isa => 'Str');
+
+
+### main pod documentation begin ###
+
+=head1 NAME
+
+Paws::ACM::ImportCertificateResponse
+
+=head1 ATTRIBUTES
+
+
+=head2 CertificateArn => Str
+
+The Amazon Resource Name (ARN) of the imported certificate.
+
+
+
+
+=cut
+
+1;
